# QdrantRag

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  body.json  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: PERSONA.md  settings.json
.claude/agents/: architect.md  coordinator.md  debugger.md  migrator.md  performance-analyst.md  refactorer.md  reviewer.md  security-analyst.md  test-writer.md
.claude/commands/: architect.md  changelog.md  debug.md  explain.md  lint.md  perf.md  refactor.md  review.md  security.md  ship.md  test.md  write-test.md
.claude/context/: agent-workflows.md  anti-patterns.md  conventions.md  decisions.md  principles.md
.claude/hooks/: on-bash-complete.sh  on-edit-complete.sh  on-notification.sh  pre-commit.sh
.claude/skills/: add-observability.md  changelog.md  code-review.md  explain.md  perf-check.md  refactor.md  security-check.md  write-test.md
.github/workflows/: ci.yml
scripts/: startup_check.py
src/: main.py
src/api/: routes.py  schemas.py
src/common/: __init__.py  auth.py  config.py  errors.py  logging.py
src/generation/: __init__.py  chain.py
src/ingestion/: pipeline.py
src/retrieval/: __init__.py  retriever.py
src/storage/: __init__.py  qdrant_store.py
static/: index.html
tests/fixtures/: sample.txt
tests/unit/: test_config.py  test_errors.py  test_health.py  test_ingestion.py  test_retriever.py  test_schemas.py
